PC版大枠の調整

--- a/src/index.html
+++ b/src/index.html
@@ -55,47 +55,60 @@
       </button> 
     </div>
 
-        <div class="l_container-sm">
-          <div class="l_header_title-box">
-            <h1 class="l_header_main-title">Saaya</h1>
-            <p class="l_header_sub-title">Welcome to<br>my portfolio site</p>
-          </div>
-        </div>
-
+          <div class="l_header_pc-sidebar">
             <nav class="l_header-nav">
               <div class="nav_menu-wrapper" id="js-hamburger-nav">
-                <ul class="nav_items_sp">
+                <div class="nav_ul-box">
+                <ul class="nav_items_list">
                   <li class="nav_items_item"><a href="#works" class="nav_items_link">WORKS</a></li>
                   <li class="nav_items_item"><a href="#about" class="nav_items_link">ABOUT</a></li>
                   <li class="nav_items_item"><a href="#skills" class="nav_items_link">SKILLS</a></li>
                   <li class="nav_items_item"><a href="#contact" class="nav_items_link">CONTACT</a></li>
                 </ul>
                 <ul class="nav_sns-links">
-                  <li class="nav_sns-icon__insta"><a href="" class="nav_sns-icon_link"><img src="insta_logo-pack/03 Black Glyph/Instagram_Glyph_Black.png" alt="Instaのロゴ"></a></li>
-                  <li class="nav_sns-icon__threads"><a href="" class="nav_sns-icon_link"><img src="Threads_logo-pack/02 Black/Logo/threads-logo-black-01.png" alt="Threadsのロゴ"></a></li>
+                  <li class="nav_sns-icon__insta">
+                    <a href="" class="nav_sns-icon_link">
+                      <img src="insta_logo-pack/03 Black Glyph/Instagram_Glyph_Black.png" alt="Instaの黒ロゴ" class="logo-black">
+                      <img src="insta_logo-pack/02 White Glyph/Instagram_Glyph_White.png" alt="Instaの白ロゴ" class="logo-white">
+                    </a>
+                  </li>
+                  <li class="nav_sns-icon__threads">
+                    <a href="" class="nav_sns-icon_link">
+                      <img src="Threads_logo-pack/02 Black/Logo/threads-logo-black-01.png" alt="Threadsの黒ロゴ" class="logo-black">
+                      <img src="Threads_logo-pack/01 White/Logo/threads-logo-white-01.png" alt="Threadsの白ロゴ" class="logo-white">
+                    </a>
+                  </li>
                 </ul>
+                </div>
               </div>
             </nav>
+          </div>
   </header> 
 
-    <section class="top_kv">
-      <div class="l_container">
-        <div class="l_contents">
-          <h2 class="top_kv_title">
-            <span class="u_kv-decoration">
-            あなたらしさを大切に。<br>
-            1人ひとりの想いに<br class="u_br__kv">
-            寄り添います。</span>
-          </h2>
-          <p class="m_main-content">
-            初回のご相談から完成まで、クライアント様の想いを大切にしながら丁寧に進めさせていただきます。
-            お気軽にご相談ください。
-          </p>
+    <div class="main-contents_for_pc">
+      <div class="l_container-sm">
+        <div class="l_header_title-box">
+          <h1 class="l_header_main-title">Saaya</h1>
+          <p class="l_header_sub-title">Welcome to<br>my portfolio site</p>
         </div>
-      </div>
-    </section>
-  </div>
 
+
+        <section class="top_kv">
+          <div class="l_container">
+              <h2 class="top_kv_title">
+                <span class="u_kv-decoration">
+                あなたらしさを大切に。<br>
+                1人ひとりの想いに<br class="u_br__kv">
+                寄り添います。</span>
+              </h2>
+              <p class="m_main-content">
+                初回のご相談から完成まで、クライアント様の想いを大切にしながら丁寧に進めさせていただきます。
+                お気軽にご相談ください。
+              </p>
+          </div>
+        </section>
+      </div>
+  
 
     <main class="l_main">
       <section class="top_works">
@@ -282,6 +295,7 @@
     <footer class="l_footer">
         <small class="l_footer_copyright-text">&copy;2025 Saaya. All rights reserved.</small>
     </footer>
+    </div>
 
 
 
