--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,8 @@
                 寄り添います。</span>
               </h2>
               <p class="m_main-content">
-                初回のご相談から完成まで、クライアント様の想いを大切にしながら丁寧に進めさせていただきます。
+                初回のご相談から完成まで、<br class="u_br__kv-p">
+                クライアント様の想いを大切にしながら丁寧に進めさせていただきます。<br class="u_br__kv-p">
                 お気軽にご相談ください。
               </p>
           </div>
@@ -168,13 +169,19 @@
             </h2>
         </div>
         <div class="l_container-sm">
+        <div class="top_about_diplay-box">
           <div class="top_about_img-box">
             <img src="/img/IMG_0383.png" alt="さあやの写真" class="top_about_my-pic">
           </div>
-          <h3 class="top_about_sub-title">さあや</h3>
-          <p class="top_about_content">
-            北海道札幌市出身。大学卒業後は、飲食業界を中心にカスタマーサービス業に携わってきました。2025年1月からWebデザインスクールで学び始め、約4ヶ月間にわたりHTML/CSSを中心としたWeb制作の基礎を習得。現在は、Webデザイナーとしてのキャリアを目指し、日々スキルを磨いています。
-          </p>
+          <div class="top_about_content-box">
+            <h3 class="top_about_sub-title">さあや</h3>
+            <p class="top_about_content">
+              北海道札幌市出身。大学卒業後は、飲食業界を中心にカスタマーサービス業に従事してきました。<br class="u_br__about">
+              WebデザインスクールでHTMLやCSSを中心としたWeb制作の基礎を学びました。<br class="u_br__about">
+              現在は、Webデザイナーとしてのキャリアを目指し、日々スキルを磨いています。
+            </p>
+          </div>
+        </div>
         </div>
         </div>
       </section>
@@ -191,47 +198,49 @@
           <p class="top_skills_content">
             これまでに学習・実践してきた技術スキルです。<br class="u_br__skills">継続的な学習を通じて、より良いWebサイト作成を目指しています。
           </p>
-          <div class="top_skills_card-box">
-            <div class="top_skills_card-item">
-              <h3 class="top_skills_card-title">Webデザイン</h3>
-              <div class="top_skills_icon-box">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" class="top_skills_icon" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/canva/canva-original.svg" class="top_skills_icon" />
+          <div class="top_skills_cards-list">
+            <div class="top_skills_card-box">
+              <div class="top_skills_card-item">
+                <h3 class="top_skills_card-title">Webデザイン</h3>
+                <div class="top_skills_icon-box">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" class="top_skills_icon" />
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/canva/canva-original.svg" class="top_skills_icon" />
+                </div>
+                <p class="top_skills_skill-name">Figma/Canva</p>
+                <p class="top_skills_card-content">
+                サイトの目的に合った構成を考え、見やすいデザイン作りを心がけています。
+                </p>
               </div>
-              <p class="top_skills_skill-name">Figma/Canva</p>
-              <p class="top_skills_card-content">
-               サイトの目的に合った構成を考え、見やすく分かりやすいデザイン作りを心がけています。
-              </p>
             </div>
-          </div>
 
-          <div class="top_skills_card-box">
-            <div class="top_skills_card-item">
-              <h3 class="top_skills_card-title">コーディング</h3>
-              <div class="top_skills_icon-box u_skills_icon__cording">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" class="top_skills_icon" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" class="top_skills_icon" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" class="top_skills_icon" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/wordpress/wordpress-plain.svg" class="top_skills_icon" />
+            <div class="top_skills_card-box">
+              <div class="top_skills_card-item">
+                <h3 class="top_skills_card-title">コーディング</h3>
+                <div class="top_skills_icon-box u_skills_icon__cording">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" class="top_skills_icon" />
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" class="top_skills_icon" />
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" class="top_skills_icon" />
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/wordpress/wordpress-plain.svg" class="top_skills_icon" />
+                </div>
+                <p class="top_skills_skill-name">HTML/CSS/<br class="u_br__skills">JavaScript/WordPress</p>
+                <p class="top_skills_card-content">
+                レスポンシブ対応や基本的なJavaScriptを使用した動きのあるサイト作成が可能です。
+                </p>
               </div>
-              <p class="top_skills_skill-name">HTML/CSS/<br class="u_br__skills">JavaScript/WordPress</p>
-              <p class="top_skills_card-content">
-               レスポンシブ対応や基本的なJavaScriptを使用した動きのあるサイト作成が可能です。
-              </p>
             </div>
-          </div>
 
-          <div class="top_skills_card-box">
-            <div class="top_skills_card-item">
-              <h3 class="top_skills_card-title">開発ツール</h3>
-              <div class="top_skills_icon-box">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" class="top_skills_icon" />
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="top_skills_icon" />
+            <div class="top_skills_card-box">
+              <div class="top_skills_card-item">
+                <h3 class="top_skills_card-title">開発ツール</h3>
+                <div class="top_skills_icon-box">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" class="top_skills_icon" />
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" class="top_skills_icon" />
+                </div>
+                <p class="top_skills_skill-name">Git/GitHub</p>
+                <p class="top_skills_card-content">
+                作業の履歴を保存したり、他の人とコードを共有したりするためのツールが使えます。
+                </p>
               </div>
-              <p class="top_skills_skill-name">Git/GitHub</p>
-              <p class="top_skills_card-content">
-               作業の履歴を保存したり、他の人とコードを共有したりするためのツールが使えます。
-              </p>
             </div>
           </div>
 
