ポートフォリオのモックアップ追加とフッターの調整

--- a/src/works_ePick.html
+++ b/src/works_ePick.html
@@ -89,7 +89,7 @@
             <h2 class="works_main-title">英会話教室サイト【仮想】</h2>
             <p class="works_category">Website</p>
         </div>
-        <a href="https://jasui-aya.github.io/myPortfolio/" class="works_url">https://jasui-aya.github.io/myPortfolio/</a>
+        <a href="https://jasui-aya.github.io/ePick-site/" class="works_url">https://jasui-aya.github.io/ePick-site/</a>
 
         <div class="works_mockup-box">
             <img src="img/img_mockup_ePick.png" alt="ePickのモックアップ" class="works_mockup-img">
@@ -123,8 +123,8 @@
                     スマートフォンでの閲覧を想定し、モバイルファーストで設計。FlatpickrやGitHub Pagesの導入にも初挑戦し、調べながら実装を行いました。
                     より実案件に近いクオリティを目指して、細部まで丁寧に制作しています。<br>
                     <span class="works_detail_disc__space">※下層ページは下記URLから直接ご覧頂くことも出来ます。</span>
-                    <a href="https://jasui-aya.github.io/myPortfolio/lessons.html" class="works_epick_link">レッスンコース詳細ページはこちら</a><br>
-                    <a href="https://jasui-aya.github.io/myPortfolio/contact.html" class="works_epick_link">無料体験レッスン申し込みページはこちら</a>
+                    <a href="https://jasui-aya.github.io/ePick-site/lessons.html" class="works_epick_link">レッスンコース詳細ページはこちら</a><br>
+                    <a href="https://jasui-aya.github.io/ePick-site/contact.html" class="works_epick_link">無料体験レッスン申し込みページはこちら</a>
                 </p>
             </div>
         </div>
@@ -155,10 +155,12 @@
     </section>
 </main>
 
-<footer class="l_footer">
+<footer class="l_footer works_detail">
     <small class="l_footer_copyright-text">&copy;2025 Saaya. All rights reserved.</small>
 </footer>
 </div>
 
 
 </body>
+
+</html>
