aタグリンクを追加

--- a/src/index.html
+++ b/src/index.html
@@ -90,13 +90,13 @@
                 </ul>
                 <ul class="nav_sns-links">
                   <li class="nav_sns-icon__insta">
-                    <a href="" class="nav_sns-icon_link">
+                    <a href="https://www.instagram.com/vshn_0" target="_blank" rel="noopener noreferrer" class="nav_sns-icon_link">
                       <img src="insta_logo-pack/03 Black Glyph/Instagram_Glyph_Black.png" alt="Instaの黒ロゴ" class="logo-black">
                       <img src="insta_logo-pack/02 White Glyph/Instagram_Glyph_White.png" alt="Instaの白ロゴ" class="logo-white">
                     </a>
                   </li>
                   <li class="nav_sns-icon__threads">
-                    <a href="" class="nav_sns-icon_link">
+                    <a href="https://www.threads.net/@vshn_0" target="_blank" rel="noopener noreferrer" class="nav_sns-icon_link">
                       <img src="Threads_logo-pack/02 Black/Logo/threads-logo-black-01.png" alt="Threadsの黒ロゴ" class="logo-black">
                       <img src="Threads_logo-pack/01 White/Logo/threads-logo-white-01.png" alt="Threadsの白ロゴ" class="logo-white">
                     </a>
@@ -147,7 +147,7 @@
             <div class="top_works_article-wrap">
               <ul class="top_works_items">
                 <li class="top_works_item">
-                  <a href="" class="top_works_link">
+                  <a href="works_ePick.html" target="_blank" class="top_works_link">
                     <div class="top_works_img-box">
                       <img src="img/img_mockup_epick.png" alt="ePickのモックアップ" class="top_works_img" width="1080" height="1080">
                     </div>
@@ -162,7 +162,7 @@
                 </li>
 
                 <li class="top_works_item">
-                  <a href="" class="top_works_link">
+                  <a href="works_original.html" target="_blank" class="top_works_link">
                     <div class="top_works_img-box">
                       <img src="img/img_mockup_epick.png" alt="ポートフォリオサイトのモックアップ" class="top_works_img" width="1080" height="1080">
                     </div>
@@ -281,7 +281,7 @@
         <div class="l_container-sm">
           <p class="top_contact_content">ご相談・料金のことなど、お気軽にご連絡ください。</p>
 
-          <form action="">
+          <form action="https://formsubmit.co/usuiusui1126@gmail.com" method="POST">
             <dl class="top_contact_table">
               <div class="top_contact_table-item">
                 <dt class="top_contact_header">お名前<span class="top_contact_required">必須</span></dt>
@@ -317,7 +317,7 @@
             <label for="privacy" class="checkbox">個人情報の取り扱いに同意します</label>
           </div>
 
-          <a href="" class="top_contact_send-button">この内容で送信する</a>
+          <button type="submit" class="top_contact_send-button">この内容で送信する</button>
         </div>
         </div>
       </section>
