--- a/src/works_ePick.html
+++ b/src/works_ePick.html
@@ -64,13 +64,13 @@
                 </ul>
                 <ul class="nav_sns-links">
                   <li class="nav_sns-icon__insta">
-                    <a href="" class="nav_sns-icon_link">
+                    <a href="https://www.instagram.com/vshn_0" target="_blank" rel="noopener noreferrer" class="nav_sns-icon_link">
                       <img src="insta_logo-pack/03 Black Glyph/Instagram_Glyph_Black.png" alt="Instaの黒ロゴ" class="logo-black">
                       <img src="insta_logo-pack/02 White Glyph/Instagram_Glyph_White.png" alt="Instaの白ロゴ" class="logo-white">
                     </a>
                   </li>
                   <li class="nav_sns-icon__threads">
-                    <a href="" class="nav_sns-icon_link">
+                    <a href="https://www.threads.net/@vshn_0" target="_blank" rel="noopener noreferrer" class="nav_sns-icon_link">
                       <img src="Threads_logo-pack/02 Black/Logo/threads-logo-black-01.png" alt="Threadsの黒ロゴ" class="logo-black">
                       <img src="Threads_logo-pack/01 White/Logo/threads-logo-white-01.png" alt="Threadsの白ロゴ" class="logo-white">
                     </a>
@@ -123,8 +123,8 @@
                     スマートフォンでの閲覧を想定し、モバイルファーストで設計。FlatpickrやGitHub Pagesの導入にも初挑戦し、調べながら実装を行いました。
                     より実案件に近いクオリティを目指して、細部まで丁寧に制作しています。<br>
                     <span class="works_detail_disc__space">※下層ページは下記URLから直接ご覧頂くことも出来ます。</span>
-                    <a href="https://jasui-aya.github.io/ePick-site/lessons.html" class="works_epick_link">レッスンコース詳細ページはこちら</a><br>
-                    <a href="https://jasui-aya.github.io/ePick-site/contact.html" class="works_epick_link">無料体験レッスン申し込みページはこちら</a>
+                    <a href="https://jasui-aya.github.io/ePick-site/lessons.html" target="_blank" class="works_epick_link">レッスンコース詳細ページはこちら</a><br>
+                    <a href="https://jasui-aya.github.io/ePick-site/contact.html" target="_blank" class="works_epick_link">無料体験レッスン申し込みページはこちら</a>
                 </p>
             </div>
         </div>
@@ -149,7 +149,7 @@
         </div>
 
         <div class="works_detail_more">
-            <a href="" class="works_detail_more-link">その他の作品を見る→</a>
+            <a href="/MyPortfolioSite/index.html#works" class="works_detail_more-link">その他の作品を見る→</a>
         </div>
       </div>
     </section>
