--- a/src/works_original.html
+++ b/src/works_original.html
@@ -60,13 +60,13 @@
                 </ul>
                 <ul class="nav_sns-links">
                   <li class="nav_sns-icon__insta">
-                    <a href="" class="nav_sns-icon_link">
+                    <a href="https://www.instagram.com/vshn_0" target="_blank" rel="noopener noreferrer" class="nav_sns-icon_link">
                       <img src="insta_logo-pack/03 Black Glyph/Instagram_Glyph_Black.png" alt="Instaの黒ロゴ" class="logo-black">
                       <img src="insta_logo-pack/02 White Glyph/Instagram_Glyph_White.png" alt="Instaの白ロゴ" class="logo-white">
                     </a>
                   </li>
                   <li class="nav_sns-icon__threads">
-                    <a href="" class="nav_sns-icon_link">
+                    <a href="https://www.threads.net/@vshn_0" target="_blank" rel="noopener noreferrer" class="nav_sns-icon_link">
                       <img src="Threads_logo-pack/02 Black/Logo/threads-logo-black-01.png" alt="Threadsの黒ロゴ" class="logo-black">
                       <img src="Threads_logo-pack/01 White/Logo/threads-logo-white-01.png" alt="Threadsの白ロゴ" class="logo-white">
                     </a>
@@ -85,7 +85,7 @@
             <h2 class="works_main-title">ポートフォリオ</h2>
             <p class="works_category">Website</p>
         </div>
-        <a href="aaa" class="works_url"></a>
+        <a href="https://jasui-aya.github.io/MyPortfolioSite/" class="works_url">https://jasui-aya.github.io/MyPortfolioSite/</a>
 
         <div class="works_mockup-box">
             <img src="img/img_mockup_portfolio.png" alt="portfolioのモックアップ" class="works_mockup-img">
@@ -142,7 +142,7 @@
         </div>
 
         <div class="works_detail_more">
-            <a href="" class="works_detail_more-link">その他の作品を見る→</a>
+            <a href="/MyPortfolioSite/index.html#works" class="works_detail_more-link">その他の作品を見る→</a>
         </div>
       </div>
     </section>
