--- a/src/works_ePick.html
+++ b/src/works_ePick.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="works_detail_more">
-            <a href="/MyPortfolioSite/index.html#works" class="works_detail_more-link">その他の作品を見る→</a>
+            <a href="/Saaya-PortfolioSite/index.html#works" class="works_detail_more-link">その他の作品を見る→</a>
         </div>
       </div>
     </section>
