--- a/src/works_original.html
+++ b/src/works_original.html
@@ -85,7 +85,7 @@
             <h2 class="works_main-title">ポートフォリオ</h2>
             <p class="works_category">Website</p>
         </div>
-        <a href="https://jasui-aya.github.io/MyPortfolioSite/" class="works_url">https://jasui-aya.github.io/MyPortfolioSite/</a>
+        <a href="https://jasui-aya.github.io/Saaya-PortfolioSite/" class="works_url">https://jasui-aya.github.io/Saaya-PortfolioSite/</a>
 
         <div class="works_mockup-box">
             <img src="img/img_mockup_portfolio.png" alt="portfolioのモックアップ" class="works_mockup-img">
@@ -142,7 +142,7 @@
         </div>
 
         <div class="works_detail_more">
-            <a href="/MyPortfolioSite/index.html#works" class="works_detail_more-link">その他の作品を見る→</a>
+            <a href="/Saaya-PortfolioSite/index.html#works" class="works_detail_more-link">その他の作品を見る→</a>
         </div>
       </div>
     </section>
