--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   
 
     <main class="l_main">
-      <section class="top_works">
+      <section class="top_works" id="works">
         <div class="l_contents">
           <div class="l_container">
             <h2 class="m_section-title">
@@ -182,7 +182,7 @@
         </div>
       </section>
 
-      <section class="top_about">
+      <section class="top_about" id="about">
         <div class="l_contents">
         <div class="l_container">
             <h2 class="m_section-title">
@@ -208,7 +208,7 @@
         </div>
       </section>
 
-      <section class="top_skills">
+      <section class="top_skills" id="skills">
         <div class="l_contents">
         <div class="l_container">
             <h2 class="m_section-title">
@@ -270,7 +270,7 @@
         </div>
       </section>
 
-      <section class="top_contact">
+      <section class="top_contact" id="contact">
         <div class="l_contents">
         <div class="l_container">
             <h2 class="m_section-title">
