写真表示エラー

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <li class="top_works_item">
                   <a href="works_original.html" target="_blank" class="top_works_link">
                     <div class="top_works_img-box">
-                      <img src="img/img_mockup_epick.png" alt="ポートフォリオサイトのモックアップ" class="top_works_img" width="1080" height="1080">
+                      <img src="img/img_mockup_portfolio.png" alt="ポートフォリオサイトのモックアップ" class="top_works_img" width="1080" height="1080">
                     </div>
                     <div class="top_works_item-content">
                       <h3 class="top_works_sub-title">ポートフォリオ</h3>
@@ -193,7 +193,7 @@
         <div class="l_container-sm">
         <div class="top_about_diplay-box">
           <div class="top_about_img-box">
-            <img src="/img/IMG_0383.png" alt="さあやの写真" class="top_about_my-pic">
+            <img src="img/IMG_0383.png" alt="さあやの写真" class="top_about_my-pic">
           </div>
           <div class="top_about_content-box">
             <h3 class="top_about_sub-title">さあや</h3>
