--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <li class="top_works_item">
                   <a href="works_ePick.html" target="_blank" class="top_works_link">
                     <div class="top_works_img-box">
-                      <img src="img/img_mockup_epick.png" alt="ePickのモックアップ" class="top_works_img" width="1080" height="1080">
+                      <img src="img/img_mockup_ePick.png" alt="ePickのモックアップ" class="top_works_img" width="1080" height="1080">
                     </div>
                     <div class="top_works_item-content">
                       <h3 class="top_works_sub-title">英会話教室サイト【仮想】</h3>
