--- a/works_original.html
+++ b/works_original.html
@@ -85,7 +85,7 @@
             <h2 class="works_main-title">ポートフォリオ</h2>
             <p class="works_category">Website</p>
         </div>
-        <a href="/https://jasui-aya.github.io/Saaya-PortfolioSite/" class="works_url">https://jasui-aya.github.io/Saaya-PortfolioSite/</a>
+        <a href="https://jasui-aya.github.io/Saaya-PortfolioSite/" class="works_url">https://jasui-aya.github.io/Saaya-PortfolioSite/</a>
 
         <div class="works_mockup-box">
             <img src="img/img_mockup_portfolio.png" alt="portfolioのモックアップ" class="works_mockup-img">
