問い合わせフォーム設定

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="l_container-sm">
           <p class="top_contact_content">ご相談・料金のことなど、お気軽にご連絡ください。</p>
 
-          <form action="https://formsubmit.co/usuiusui1126@gmail.com" method="POST">
+          <form action="https://formspree.io/f/mblkklvd" method="POST">
             <dl class="top_contact_table">
               <div class="top_contact_table-item">
                 <dt class="top_contact_header">お名前<span class="top_contact_required">必須</span></dt>
