ホバー時のアクション付けとリンク変更

--- a/works_original.html
+++ b/works_original.html
@@ -53,10 +53,10 @@
               <div class="nav_menu-wrapper" id="js-hamburger-nav">
                 <div class="nav_ul-box">
                 <ul class="nav_items_list">
-                  <li class="nav_items_item"><a href="#works" class="nav_items_link">WORKS</a></li>
-                  <li class="nav_items_item"><a href="#about" class="nav_items_link">ABOUT</a></li>
-                  <li class="nav_items_item"><a href="#skills" class="nav_items_link">SKILLS</a></li>
-                  <li class="nav_items_item"><a href="#contact" class="nav_items_link">CONTACT</a></li>
+                  <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#works" class="nav_items_link">WORKS</a></li>
+                  <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#about" class="nav_items_link">ABOUT</a></li>
+                  <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#skills" class="nav_items_link">SKILLS</a></li>
+                  <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#contact" class="nav_items_link">CONTACT</a></li>
                 </ul>
                 <ul class="nav_sns-links">
                   <li class="nav_sns-icon__insta">
