--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <div class="nav_menu-wrapper" id="js-hamburger-nav">
                 <div class="nav_ul-box">
                 <ul class="nav_items_list">
+                  <li class="nav_items_item"><a href="#top" class="nav_items_link">TOP</a></li>
                   <li class="nav_items_item"><a href="#works" class="nav_items_link">WORKS</a></li>
                   <li class="nav_items_item"><a href="#about" class="nav_items_link">ABOUT</a></li>
                   <li class="nav_items_item"><a href="#skills" class="nav_items_link">SKILLS</a></li>
@@ -108,7 +109,7 @@
           </div>
   </header> 
 
-    <div class="main-contents_for_pc">
+    <div class="main-contents_for_pc" id="top">
       <div class="l_container-sm">
         <div class="l_header_title-box">
           <h1 class="l_header_main-title">Saaya</h1>
