--- a/works_original.html
+++ b/works_original.html
@@ -53,6 +53,7 @@
               <div class="nav_menu-wrapper" id="js-hamburger-nav">
                 <div class="nav_ul-box">
                 <ul class="nav_items_list">
+                  <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#top" class="nav_items_link">TOP</a></li>
                   <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#works" class="nav_items_link">WORKS</a></li>
                   <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#about" class="nav_items_link">ABOUT</a></li>
                   <li class="nav_items_item"><a href="/Saaya-PortfolioSite/index.html#skills" class="nav_items_link">SKILLS</a></li>
