--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
    </div>      
 
-  <header class="l_header">
+  <header class="l_header" id="top">
     <div class="l_header_bar">
       <button class="l_header-hamburger m_hamburger" id="js-hamburger">
         <span></span>
@@ -109,7 +109,7 @@
           </div>
   </header> 
 
-    <div class="main-contents_for_pc" id="top">
+    <div class="main-contents_for_pc">
       <div class="l_container-sm">
         <div class="l_header_title-box">
           <h1 class="l_header_main-title">Saaya</h1>
