--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
   <meta name="format-detection" content="telephone=no">
   
 <!-- favicon/web-clip-icon -->
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="img/favicon.png" type="image/png">
-  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/webclip.png">
+  <link rel="icon" href="img/favicon-webclip.png" type="image/png">
+  <link rel="apple-touch-icon" href="img/favicon-webclip.png">
 
 <!-- OGP -->
   <meta property="og:site_name" content="さあやのポートフォリオ">
-  <meta property="og:url" content="URL">
+  <meta property="og:url" content="https://jasui-aya.github.io/Saaya-PortfolioSite/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="さあやのポートフォリオ">
   <meta property="og:description" content="さあやのWebデザインポートフォリオサイトです。初回のご相談から完成まで、クライアント様の想いを大切にしながら丁寧に進めさせていただいています。">
-  <meta property="og:image" content="URL">
+  <meta property="og:image" content="https://jasui-aya.github.io/Saaya-PortfolioSite/img/portfolio_mockup.png">
   <meta property="og:locale" content="ja_JP">
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@ユーザー名">
-  <meta name="twitter:description" content="ページの説明">
+  <meta name="twitter:title" content="さあやのポートフォリオ">
+  <meta name="twitter:description" content="さあやのWebデザインポートフォリオサイト。丁寧で想いのこもった制作を心がけています。">
+  <meta name="twitter:image" content="https://jasui-aya.github.io/Saaya-PortfolioSite/img/portfolio_mockup.png">
+
 
  <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
